Fix tooltips in feature table on Safari

--- a/themes/dataone/layouts/partials/blocks/feature-table/feature-table.scss
+++ b/themes/dataone/layouts/partials/blocks/feature-table/feature-table.scss
@@ -175,7 +175,8 @@
 
   // The icon that has the description tooltip
   &__details {
-    cursor: help;
+    position: relative;
+    cursor  : help;
 
     .icon {
       pointer-events: none;
